# Travel-AI-Masumi

./: README.md
travelai/: README.md  pyproject.toml  test_flight_search.py
travelai/api_responses/: booking_20250327_025142.txt  booking_20250327_025226.txt  booking_20250327_025336.txt  booking_20250327_025345.txt  booking_20250327_025404.txt  booking_20250327_025421.txt  booking_20250327_030653.txt  booking_20250327_031917.txt  booking_20250327_032353.txt  booking_20250327_033720.txt  booking_20250327_033736.txt  booking_20250327_033749.txt  booking_20250327_034404.txt  booking_20250327_034420.txt  booking_20250327_034432.txt  booking_20250327_035042.txt  booking_20250327_035353.txt  booking_20250327_042207.txt  booking_20250327_042208.txt  booking_20250327_042210.txt  booking_20250327_042212.txt  booking_20250327_042213.txt  booking_20250327_042215.txt  booking_20250327_050634.txt  booking_20250327_052804.txt  booking_20250327_054111.txt  booking_20250327_060806.txt  booking_20250327_062200.txt  search_SFO_LAX_20250402_163732.json  search_SFO_LAX_20250402_163732.txt  search_SFO_LAX_20250402_165349.txt  search_SFO_LAX_20250402_170253.json  search_SFO_LAX_20250402_170253.txt  search_SFO_LAX_20250402_170506.json  search_SFO_LAX_20250402_170506.txt  search_SFO_LAX_20250402_170830.json  search_SFO_LAX_20250402_170830.txt  search_SFO_NYC_20250326_221128.json  search_SFO_NYC_20250326_221128.txt  search_WAS_NYC_20250327_025034.json  (+32 more)
travelai/bookings/: ORDER_20250327064511.json  ORDER_20250327064823.json  ORDER_20250327134304.json  ORDER_20250402163940.json  (+23 more)
(+25 files in other folders)
